total calculation, Fix CSS layout issues, update order handling logic, and improve product addition feedbac

--- a/assets/css/comon.css
+++ b/assets/css/comon.css
@@ -181,13 +181,12 @@ nav {
         border-radius: 15px;
         gap: 10px;
         width: 400px;
-        max-height: 530px;
         padding-bottom: 20px;
         }
         .image{
         width: 398px;
         margin-left: -14px;
-        height: 300px;
+        height: 250px;
         margin-top: -15px;
         border-radius: 15px 15px 0 0;
         box-shadow: var(--lightgreen) 0px 1px 1px 1px;
@@ -228,13 +227,14 @@ nav {
     
 }
 
-.product_details{
+ .product_details{
   font-size: 14px;
   color: var(--darkgreen);
-   margin: 10px 0;
-   min-height: 80px;
-   max-height: 80px;
-   width: 350px;
+  max-width: 100%;
+  height: 58px;
+  overflow: hidden;
+  word-break: break-word;
+  text-overflow: ellipsis;
 }
 
 #navbtn{
